Content wrapper should be longer on mobile, the hover also has focus and active to work on mobile. Some animation bugs were fixed

--- a/Pomodoro/tomatocss.css
+++ b/Pomodoro/tomatocss.css
@@ -11,7 +11,7 @@ a:visited {
   color: inherit;
   text-decoration: none;
 }
-a:hover, a:active {
+a:hover, a:focus, a:active {
   text-decoration: underline;
 }
 
@@ -28,7 +28,8 @@ body {
   overflow:hidden;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 600px) {
+  /*for mobile*/
   .contentCountainer {
     height: 2000px;
     position: relative;
@@ -41,7 +42,7 @@ body {
     top: 150px;
   }
   100% {
-    top: 1000px;
+    top: 2000px;
   }
 }
 
@@ -103,7 +104,8 @@ body {
   display: none;
 }
 
-.dropdown:hover .features-menu, .dropdown:active .features-menu {
+.dropdown:hover .features-menu, .dropdown:focus .features-menu,
+.dropdown:active .features-menu{
   display: flex;
   flex-direction: column;
   background: #414141;
